Adding new files

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -148,7 +148,7 @@
         </form>
         <footer class="footer">
                 <div class="container">
-                    <p><a href="./api/friends.js">API Friends List</a> | <a href="git@github.com:Moca2018/FriendFinder.git">GitHub Repo</a></p>
+                    <p><a href="/api/friends">API Friends List</a> | <a href="https://moca2018.github.io/FriendFinder/">GitHub Repo</a></p>
                 </div>
             </footer>
 
