--- a/app/public/home.html
+++ b/app/public/home.html
@@ -34,8 +34,10 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <p><a href="./app/data/friends.js">API Friends List</a> | <a href="git@github.com:Moca2018/FriendFinder.git">GitHub Repo</a></p>
+                <p><a href="/api/friends">API Friends List</a> | <a href="https://moca2018.github.io/FriendFinder/">GitHub Repo</a></p>
         </div>
     </footer>
 </body>
 </html>
+
+https://moca2018.github.io/FriendFinder/
